add database and build side pane

--- a/src/main/resources/com/example/dndictionary/views/SidePane.fxml
+++ b/src/main/resources/com/example/dndictionary/views/SidePane.fxml
@@ -2,52 +2,46 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.VBox?>
 <?import org.controlsfx.glyphfont.Glyph?>
 
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
 <VBox id="sidePane" prefHeight="720.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.dndictionary.controllers.SidePaneController">
     <children>
-        <Button id="sidePaneButton" fx:id="homeButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="250.0" text="Home">
-            <VBox.margin>
-                <Insets />
-            </VBox.margin>
+        <Button id="sidePaneButton" fx:id="homeButton" mnemonicParsing="false" onAction="#switchToMainScene" prefHeight="25.0" prefWidth="250.0" text="Home">
             <graphic>
                 <Glyph fx:id="homeGlyph" prefHeight="30.0" prefWidth="35.0" text="🏠" />
             </graphic>
             <padding>
-                <Insets bottom="20.0" right="150.0" top="20.0" />
+                <Insets bottom="20.0" left="10.0" right="140.0" top="20.0" />
             </padding>
-            <tooltip>
-                <Tooltip text="return to main word page" />
-            </tooltip>
         </Button>
-        <Button id="sidePaneButton" fx:id="userWordButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="250.0" text="Add New Word">
-            <VBox.margin>
-                <Insets />
-            </VBox.margin>
+        <Button id="sidePaneButton" fx:id="userWordButton" mnemonicParsing="false" onAction="#switchToAddWordScene" prefHeight="25.0" prefWidth="250.0" text="Add New Word">
             <graphic>
                 <Glyph prefHeight="30.0" prefWidth="31.0" text="➕" />
             </graphic>
             <padding>
-                <Insets bottom="20.0" right="70.0" top="20.0" />
+                <Insets bottom="20.0" left="10.0" right="60.0" top="20.0" />
             </padding>
-            <tooltip>
-                <Tooltip text="go to your words" />
-            </tooltip>
         </Button>
-        <Button id="sidePaneButton" fx:id="gameButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="250.0" text="Game">
-            <VBox.margin>
-                <Insets />
-            </VBox.margin>
+        <Button id="sidePaneButton" fx:id="gameButton" mnemonicParsing="false" onAction="#switchToGameScene" prefHeight="25.0" prefWidth="250.0" text="Game">
             <graphic>
                 <Glyph prefHeight="30.0" prefWidth="31.0" text="🎮" />
             </graphic>
             <padding>
-                <Insets bottom="20.0" right="150.0" top="20.0" />
+                <Insets bottom="20.0" left="10.0" right="150.0" top="20.0" />
             </padding>
         </Button>
-        <Button id="sidePaneButton" fx:id="translateButton" mnemonicParsing="false" prefHeight="70.0" prefWidth="250.0" text="Translate">
+        <Button id="sidePaneButton" fx:id="bookmarkButton" mnemonicParsing="false" onAction="#switchToBookmarkScene" prefHeight="25.0" prefWidth="250.0" text="Bookmark">
+            <graphic>
+                <Glyph prefHeight="30.0" prefWidth="30.0" text="📖" />
+            </graphic>
+            <padding>
+                <Insets bottom="20.0" right="100.0" top="20.0" />
+            </padding>
+        </Button>
+        <Button id="sidePaneButton" fx:id="translateButton" mnemonicParsing="false" onAction="#switchToTranslationScene" prefHeight="70.0" prefWidth="250.0" text="Translate">
             <padding>
                 <Insets bottom="20.0" left="10.0" right="125.0" top="20.0" />
             </padding>
@@ -55,7 +49,7 @@
                 <Glyph prefHeight="30.0" prefWidth="25.0" text="📑" />
             </graphic>
         </Button>
-        <Button id="sidePaneButton" fx:id="settingButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="250.0" text="Setting">
+        <Button id="sidePaneButton" fx:id="settingButton" mnemonicParsing="false" onAction="#switchToSettingScene" prefHeight="25.0" prefWidth="250.0" text="Setting">
             <VBox.margin>
                 <Insets top="300.0" />
             </VBox.margin>
@@ -65,9 +59,6 @@
             <padding>
                 <Insets bottom="20.0" left="10.0" right="140.0" top="20.0" />
             </padding>
-            <tooltip>
-                <Tooltip text="main app setting" />
-            </tooltip>
         </Button>
     </children>
 </VBox>
