--- a/src/main/resources/com/example/dndictionary/views/WelcomeScene.fxml
+++ b/src/main/resources/com/example/dndictionary/views/WelcomeScene.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -10,10 +15,10 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="rootAnchorPane" fx:id="rootAnchor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.dndictionary.controllers.WelcomeSceneController">
+<AnchorPane id="rootAnchorPane" fx:id="rootAnchor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.dndictionary.controllers.WelcomeSceneController">
   <children>
-    <TextField fx:id="searchBox" text="Search" layoutX="300.0" layoutY="50.0" prefHeight="25.0" prefWidth="400.0" AnchorPane.topAnchor="50.0" />
-    <ListView fx:id="list" layoutX="300.0" layoutY="119.0" prefHeight="300.0" prefWidth="400.0" AnchorPane.bottomAnchor="320.0" />
+    <TextField fx:id="searchBox" layoutX="300.0" layoutY="50.0" onKeyReleased="#searchWord" prefHeight="45.0" prefWidth="400.0" AnchorPane.topAnchor="50.0" promptText="Search..." styleClass="rounded-search-box"/>
+    <ListView fx:id="list" layoutX="300.0" layoutY="119.0" onMouseClicked="#displayWordInSearchList" prefHeight="282.0" prefWidth="400.0" AnchorPane.bottomAnchor="320.0" />
     <AnchorPane id="wordVBoxBackground" prefHeight="620.0" prefWidth="400.0" AnchorPane.bottomAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="50.0">
       <children>
         <VBox id="wordVBox" layoutX="-4.0" layoutY="38.0" prefHeight="620.0" prefWidth="389.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="50.0">
@@ -44,7 +49,7 @@
             </Label>
           </children>
         </VBox>
-        <Button id="speakButton" fx:id="bookmarkButton" layoutX="351.0" layoutY="47.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="45.0" text="🔖">
+        <Button id="speakButton" fx:id="bookmarkButton" layoutX="351.0" layoutY="47.0" mnemonicParsing="false" onAction="#bookmark" prefHeight="45.0" prefWidth="45.0" text="📖">
           <font>
             <Font size="19.0" />
           </font>
@@ -52,7 +57,7 @@
             <Tooltip text="bookmark selected word" />
           </tooltip>
         </Button>
-        <Button id="speakButton" layoutX="351.0" layoutY="103.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="45.0" text="🔊">
+        <Button id="speakButton" layoutX="351.0" layoutY="103.0" mnemonicParsing="false" onAction="#speak" prefHeight="45.0" prefWidth="45.0" text="🔊">
           <font>
             <Font size="19.0" />
           </font>
@@ -63,7 +68,7 @@
       </children>
     </AnchorPane>
     <Button fx:id="closeButton" layoutX="1233.0" mnemonicParsing="false" onAction="#handleCloseButtonAction" prefHeight="30.0" prefWidth="47.0" text="X" />
-    <ListView fx:id="bookmarkList" layoutX="300.0" layoutY="370.0" prefHeight="220.0" prefWidth="400.0" AnchorPane.bottomAnchor="50.0" />
+    <ListView fx:id="bookmarkList" layoutX="300.0" layoutY="370.0" onMouseClicked="#displayWordInBookmarkList" prefHeight="220.0" prefWidth="400.0" AnchorPane.bottomAnchor="50.0" />
     <Label layoutX="300.0" layoutY="403.0" prefHeight="44.0" prefWidth="400.0" text="Bookmarked words:" />
   </children>
 </AnchorPane>
