--- a/src/main/resources/com/example/dndictionary/views/SidePane.fxml
+++ b/src/main/resources/com/example/dndictionary/views/SidePane.fxml
@@ -33,14 +33,14 @@
                 <Insets bottom="20.0" left="10.0" right="150.0" top="20.0" />
             </padding>
         </Button>
-        <Button id="sidePaneButton" fx:id="bookmarkButton" mnemonicParsing="false" onAction="#switchToBookmarkScene" prefHeight="25.0" prefWidth="250.0" text="Bookmark">
-            <graphic>
-                <Glyph prefHeight="30.0" prefWidth="30.0" text="📖" />
-            </graphic>
-            <padding>
-                <Insets bottom="20.0" right="100.0" top="20.0" />
-            </padding>
-        </Button>
+<!--        <Button id="sidePaneButton" fx:id="bookmarkButton" mnemonicParsing="false" onAction="#switchToBookmarkScene" prefHeight="25.0" prefWidth="250.0" text="Bookmark">-->
+<!--            <graphic>-->
+<!--                <Glyph prefHeight="30.0" prefWidth="30.0" text="📖" />-->
+<!--            </graphic>-->
+<!--            <padding>-->
+<!--                <Insets bottom="20.0" right="100.0" top="20.0" />-->
+<!--            </padding>-->
+<!--        </Button>-->
         <Button id="sidePaneButton" fx:id="translateButton" mnemonicParsing="false" onAction="#switchToTranslationScene" prefHeight="70.0" prefWidth="250.0" text="Translate">
             <padding>
                 <Insets bottom="20.0" left="10.0" right="125.0" top="20.0" />
@@ -51,7 +51,7 @@
         </Button>
         <Button id="sidePaneButton" fx:id="settingButton" mnemonicParsing="false" onAction="#switchToSettingScene" prefHeight="25.0" prefWidth="250.0" text="Setting">
             <VBox.margin>
-                <Insets top="300.0" />
+                <Insets top="350.0" />
             </VBox.margin>
             <graphic>
                 <Glyph prefHeight="30.0" prefWidth="29.0" text="⚙" />
