--- a/src/main/resources/com/example/dndictionary/views/WelcomeScene.fxml
+++ b/src/main/resources/com/example/dndictionary/views/WelcomeScene.fxml
@@ -5,21 +5,13 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.Tooltip?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
 <AnchorPane id="rootAnchorPane" fx:id="rootAnchor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.dndictionary.controllers.WelcomeSceneController">
   <children>
-    <TextField fx:id="searchBox" layoutX="300.0" layoutY="50.0" onKeyReleased="#searchWord" prefHeight="45.0" prefWidth="400.0" AnchorPane.topAnchor="50.0" promptText="Search..." styleClass="rounded-search-box"/>
-    <ListView fx:id="list" layoutX="300.0" layoutY="119.0" onMouseClicked="#displayWordInSearchList" prefHeight="282.0" prefWidth="400.0" AnchorPane.bottomAnchor="320.0" />
-    <AnchorPane id="wordVBoxBackground" prefHeight="620.0" prefWidth="400.0" AnchorPane.bottomAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="50.0">
+    <HBox prefHeight="100.0" prefWidth="200.0" />
+    <TextField fx:id="searchBox" layoutX="311.0" layoutY="74.0" onKeyReleased="#searchWord" prefHeight="45.0" prefWidth="391.0" promptText="Search..." styleClass="rounded-search-box" AnchorPane.topAnchor="74.0" />
+    <ListView fx:id="list" layoutX="309.0" layoutY="123.0" onMouseClicked="#displayWordInSearchList" prefHeight="258.0" prefWidth="391.0" AnchorPane.bottomAnchor="315.0" />
+    <AnchorPane id="wordVBoxBackground" layoutX="830.0" layoutY="74.0" prefHeight="601.0" prefWidth="400.0" AnchorPane.bottomAnchor="45.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="74.0">
       <children>
         <VBox id="wordVBox" layoutX="-4.0" layoutY="38.0" prefHeight="620.0" prefWidth="389.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="50.0">
           <children>
@@ -54,21 +46,22 @@
             <Font size="19.0" />
           </font>
           <tooltip>
-            <Tooltip text="bookmark selected word" />
+            <Tooltip text="Add to Bookmark" />
           </tooltip>
         </Button>
-        <Button id="speakButton" layoutX="351.0" layoutY="103.0" mnemonicParsing="false" onAction="#speak" prefHeight="45.0" prefWidth="45.0" text="🔊">
+        <Button id="speakButton" layoutX="351.0" layoutY="102.0" mnemonicParsing="false" onAction="#speak" prefHeight="45.0" prefWidth="45.0" text="🔊">
           <font>
             <Font size="19.0" />
           </font>
           <tooltip>
-            <Tooltip text="pronunce word" />
+            <Tooltip text="Pronunciation" />
           </tooltip>
         </Button>
       </children>
     </AnchorPane>
     <Button fx:id="closeButton" layoutX="1233.0" mnemonicParsing="false" onAction="#handleCloseButtonAction" prefHeight="30.0" prefWidth="47.0" text="X" />
-    <ListView fx:id="bookmarkList" layoutX="300.0" layoutY="370.0" onMouseClicked="#displayWordInBookmarkList" prefHeight="220.0" prefWidth="400.0" AnchorPane.bottomAnchor="50.0" />
-    <Label layoutX="300.0" layoutY="403.0" prefHeight="44.0" prefWidth="400.0" text="Bookmarked words:" />
+    <ListView fx:id="bookmarkList" layoutX="300.0" layoutY="455.0" onMouseClicked="#displayWordInBookmarkList" prefHeight="220.0" prefWidth="400.0" AnchorPane.bottomAnchor="45.0" />
+    <Label layoutX="300.0" layoutY="408.0" prefHeight="44.0" prefWidth="400.0" text="Bookmarked words:" />
+    <Label id="wordWelcome" alignment="CENTER" layoutX="590.0" layoutY="15.0" prefHeight="36.0" prefWidth="340.0" text="Welcome to DNDictionary" />
   </children>
 </AnchorPane>
