--- a/src/main/resources/com/example/dndictionary/views/ChooseItem.fxml
+++ b/src/main/resources/com/example/dndictionary/views/ChooseItem.fxml
@@ -47,5 +47,10 @@
                 </Button>
             </children>
         </GridPane>
+        <ImageView fx:id="healthImage" preserveRatio="true" fitHeight="46.0" fitWidth="173.0" layoutX="1093.0" layoutY="78.0" GridPane.columnIndex="2">
+            <image>
+                <Image url="@../pictures/threeHeart.png" />
+            </image>
+        </ImageView>
     </children>
 </AnchorPane>
