--- a/src/main/resources/com/example/dndictionary/views/multipleChoiceScene.fxml
+++ b/src/main/resources/com/example/dndictionary/views/multipleChoiceScene.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
@@ -12,7 +13,8 @@
         <Label id="mcQuestion" fx:id="questionBox" layoutX="220.0" layoutY="190.0" prefHeight="188.0" prefWidth="935.0" text="QuestionBox">
             <font>
                 <Font name="Comic Sans MS" size="23.0" />
-            </font></Label>
+            </font>
+        </Label>
         <GridPane id="mcGridPane1" prefHeight="54.0" prefWidth="1280.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -45,6 +47,11 @@
                 </Button>
             </children>
         </GridPane>
+        <ImageView fx:id="healthImage" preserveRatio="true" fitHeight="46.0" fitWidth="173.0" layoutX="1093.0" layoutY="78.0" GridPane.columnIndex="2">
+           <image>
+               <Image url="@../pictures/threeHeart.png" />
+           </image>
+        </ImageView>
         <GridPane hgap="50.0" layoutX="18.0" layoutY="452.0" prefHeight="250.0" prefWidth="1246.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
