--- a/src/main/resources/com/example/dndictionary/views/ChooseItemEnd.fxml
+++ b/src/main/resources/com/example/dndictionary/views/ChooseItemEnd.fxml
@@ -7,12 +7,12 @@
 
 <AnchorPane id="mcAnchorPane" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.dndictionary.controllers.ChooseItemEndController">
     <children>
-        <Label fx:id="scoreBox" alignment="CENTER" contentDisplay="CENTER" layoutX="301.0" layoutY="122.0" prefHeight="18.0" prefWidth="678.0" textAlignment="CENTER">
+        <Label fx:id="scoreBox" alignment="CENTER" contentDisplay="CENTER" layoutX="301.0" layoutY="117.0" prefHeight="18.0" prefWidth="678.0" style="-fx-font-size: 40px;" textAlignment="CENTER">
             <font>
                 <Font size="40.0" />
             </font>
         </Label>
-        <Label fx:id="emotionBox" alignment="CENTER" contentDisplay="CENTER" layoutX="301.0" layoutY="176.0" prefHeight="18.0" prefWidth="678.0">
+        <Label fx:id="emotionBox" alignment="CENTER" contentDisplay="CENTER" layoutX="301.0" layoutY="177.0" prefHeight="18.0" prefWidth="678.0" style="-fx-font-size: 35px;">
             <font>
                 <Font size="30.0" />
             </font>
