--- a/src/main/resources/com/example/dndictionary/views/gameScene.fxml
+++ b/src/main/resources/com/example/dndictionary/views/gameScene.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
@@ -7,27 +8,37 @@
 
 <AnchorPane id="rootAnchorPane" fx:id="rootAnchor" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.dndictionary.controllers.GameSceneController">
    <children>
-       <Button id="gameButton" layoutX="353.0" layoutY="217.0" mnemonicParsing="false" onAction="#switchToMultipleChoiceScene" prefHeight="70.0" prefWidth="200.0" text="Multiple Choice">
+       <Button id="gameButton" layoutX="375.0" layoutY="381.0" mnemonicParsing="false" onAction="#switchToMultipleChoiceScene" prefHeight="70.0" prefWidth="200.0" text="Multiple Choice">
            <font>
                <Font name="Comic Sans MS" size="23.0" />
            </font>
        </Button>
-       <ImageView fitHeight="123.0" fitWidth="135.0" layoutX="392.0" layoutY="74.0" pickOnBounds="true" preserveRatio="true">
+       <ImageView fitHeight="123.0" fitWidth="135.0" layoutX="414.0" layoutY="237.0" pickOnBounds="true" preserveRatio="true">
           <image>
               <Image url="@../pictures/multichoice_game.png" />
           </image>
        </ImageView>
-       <Button id="gameButton" layoutX="711.0" layoutY="341.0" mnemonicParsing="false" onAction="#switchToChooseItemGameScene" prefHeight="70.0" prefWidth="200.0" text="Choose Item">
+       <Button id="gameButton" layoutX="683.0" layoutY="381.0" mnemonicParsing="false" onAction="#switchToChooseItemGameScene" prefHeight="70.0" prefWidth="200.0" text="Choose Item">
            <font>
                <Font name="Comic Sans MS" size="23.0" />
            </font>
        </Button>
-       <ImageView fitHeight="114.0" fitWidth="125.0" layoutX="754.0" layoutY="210.0" pickOnBounds="true" preserveRatio="true">
+       <ImageView fitHeight="114.0" fitWidth="125.0" layoutX="726.0" layoutY="247.0" pickOnBounds="true" preserveRatio="true">
           <image>
               <Image url="@../pictures/chooseItem_game.png" />
           </image>
        </ImageView>
-       <Label id="mcQuestion" layoutX="654.0" layoutY="106.0" text="Choose game:" />
+       <Button id="gameButton" layoutX="980.0" layoutY="381.0" mnemonicParsing="false" onAction="#switchToHangManGameScene" prefHeight="70.0" prefWidth="200.0" text="Hangman">
+           <font>
+               <Font name="Comic Sans MS" size="23.0" />
+           </font>
+       </Button>
+       <ImageView fitHeight="114.0" fitWidth="125.0" layoutX="1022.0" layoutY="247.0" pickOnBounds="true" preserveRatio="true">
+           <image>
+               <Image url="@../pictures/hangman_game.png" />
+           </image>
+       </ImageView>
+       <Label id="mcQuestion" layoutX="637.0" layoutY="106.0" text="Choose game" />
        <Button fx:id="closeButton" layoutX="1233.0" mnemonicParsing="false" onAction="#handleCloseButtonAction" prefHeight="30.0" prefWidth="47.0" text="X" />
 
    </children>
