--- a/src/main/resources/com/example/dndictionary/views/multipleChoiceScene.fxml
+++ b/src/main/resources/com/example/dndictionary/views/multipleChoiceScene.fxml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="mcAnchorPane" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.dndictionary.controllers.MultipleChoiceController">
+<AnchorPane id="mcAnchorPane" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.dndictionary.controllers.MultipleChoiceController">
     <children>
-        <ImageView fx:id="imageView" fitHeight="720.0" fitWidth="1278.0" layoutX="1.0" layoutY="95.0" pickOnBounds="true" preserveRatio="true" />
-        <Label id="mcQuestion" fx:id="questionBox" layoutX="220.0" layoutY="190.0" prefHeight="188.0" prefWidth="935.0" text="QuestionBox">
+        <Label id="mcQuestion" fx:id="questionBox" alignment="CENTER" layoutX="151.0" layoutY="142.0" prefHeight="217.0" prefWidth="959.0" style="-fx-text-alignment: center;" text="QuestionBox" textAlignment="CENTER" wrapText="true">
             <font>
                 <Font name="Comic Sans MS" size="23.0" />
             </font>
@@ -47,11 +48,6 @@
                 </Button>
             </children>
         </GridPane>
-        <ImageView fx:id="healthImage" preserveRatio="true" fitHeight="46.0" fitWidth="173.0" layoutX="1093.0" layoutY="78.0" GridPane.columnIndex="2">
-           <image>
-               <Image url="@../pictures/threeHeart.png" />
-           </image>
-        </ImageView>
         <GridPane hgap="50.0" layoutX="18.0" layoutY="452.0" prefHeight="250.0" prefWidth="1246.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
