--- a/src/main/resources/com/example/dndictionary/views/AddNewWordScene.fxml
+++ b/src/main/resources/com/example/dndictionary/views/AddNewWordScene.fxml
@@ -1,24 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="rootAnchorPane" fx:id="rootAnchor" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.dndictionary.controllers.AddNewWordSceneController">
+<AnchorPane id="rootAnchorPane" fx:id="rootAnchor" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.dndictionary.controllers.AddNewWordSceneController">
     <children>
-        <TextField fx:id="userDefinedWord" layoutX="300.0" layoutY="50.0" prefHeight="41.0" prefWidth="235.0" promptText="Word" AnchorPane.topAnchor="50.0" />
-        <TextField fx:id="userDefinedMeaning" layoutX="300.0" layoutY="104.0" onAction="#addUserDefinedWord" prefHeight="62.0" prefWidth="235.0" promptText="Meaning" />
-        <Button id="newWordSubmitButton" fx:id="submitButton" layoutX="589.0" layoutY="50.0" mnemonicParsing="false" onAction="#addUserDefinedWord" prefHeight="41.0" prefWidth="80.0" text="Submit" />
+        <TextField fx:id="userDefinedWord" layoutX="300.0" layoutY="50.0" prefHeight="41.0" prefWidth="280.0" promptText="Word" AnchorPane.topAnchor="50.0" />
+        <TextField fx:id="userDefinedMeaning" layoutX="300.0" layoutY="104.0" onAction="#addUserDefinedWord" prefHeight="62.0" prefWidth="280.0" promptText="Meaning" />
+        <Button id="newWordSubmitButton" fx:id="submitButton" layoutX="615.0" layoutY="50.0" mnemonicParsing="false" onAction="#addUserDefinedWord" prefHeight="41.0" prefWidth="80.0" text="Submit" />
         <ListView fx:id="list" editable="true" layoutX="300.0" layoutY="194.0" onMouseClicked="#displayWord" prefHeight="393.0" prefWidth="400.0" AnchorPane.bottomAnchor="50.0" />
         <TextField fx:id="searchBox" layoutX="300.0" layoutY="219.0" onKeyReleased="#searchWord" prefHeight="41.0" prefWidth="400.0" promptText="Search..." />
         <AnchorPane id="wordVBoxBackground" layoutX="772.0" layoutY="-1.0" prefHeight="620.0" prefWidth="400.0" AnchorPane.bottomAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="50.0">
